--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<head> Sig Fig </head>
+<head> 
+  <title> Sig Fig Project 1, A Poem</title>
+</head>
+
+<body>
+  
+  <h1>Github Poetry Project</h1>
+  <h2>A Flarf poem created using Google and Github<h/h2>
+    
+    <p> Derivative of a close friend.</p>
+
+    <p> See ya bossom.</p>
+
+    <p>I consume</p>
+
+    <p>chump change for</p>
+
+    <p>nutrients.</p>
+
+    <p>the signifigance resents</p>
+
+    <p>fake figures.</p>
+    
+    </body>
