--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
 <body>
   
   <h1>Github Poetry Project</h1>
-  <h2>A Flarf poem created using Google and Github<h/h2>
     
     <p> Derivative of a close friend.</p>
 
     <p> See ya bossom.</p>
 
-    <p>I consume</p>
+  <p>I consume <a href="https://images.app.goo.gl/wq5k6ZfCif82Hs2G7"</a></p>
 
     <p>chump change for</p>
 
