--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 
 <body>
   
-  <h1>Github Poetry Project</h1>
+  <h1>Far Off- A Git Hub Poetry Project</h1>
     
     <p> Derivative of a close friend.</p>
 
     <p> See ya bossom.</p>
 
-  <p>I consume <img src="D0E960CC-E949_C.JPG"> </p>
+  <p>I consume</p>
                     
     <p>chump change for</p>
 
