--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     
     <p>chump change for</p>
 
-    <p>nutrients.</p>
+    <p>nutrients <a href= "https://www.healthline.com/health/food-nutrition/six-essential-nutrients#minerals"<.></a></p>
 
     <p>the signifigance resents</p>
 
