--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <h1>Far Off- A Git Hub Poetry Project</h1>
     
-    <p> Derivative of a close friend.</p>
+    <p> Derivative of a close friend.</p>  <img src="https://ibb.co/Qk3841q"
 
     <p> See ya bossom.</p>
 
