--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   
   <h1>Far Off- A Git Hub Poetry Project</h1>
     
-    <p> Derivative of a close friend.</p>  <img src="1FA5CF4F-7335-4F36-AAE9-726A581B417B.jpeg"
-
+    <p> Derivative of a close friend.</p>  
+  
+  <img src="pic_trulli.jpg"
+  
     <p> See ya bossom.</p>
 
   <p>I consume</p>
