--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <p> Derivative of a close friend.</p>  
   
-  <img src="pic_trulli.jpg"
+  <img src="pic_trulli.jpg" alt="cafe">
   
     <p> See ya bossom.</p>
 
