--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     
     <p> Derivative of a close friend.</p>  
   
+  <!DOCTYPE html>
+<html>
+<body>
+
+<img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
+
+</body>
+</html>
+  
     <p> See ya bossom.</p>
 
   <p>I consume</p>
