--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <html>
 <body>
 
-<img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
+<img src="1FA5CF4F-7335-4F36-AAE9-726A581B417B.jpeg" width="500" height="333">
 
 </body>
 </html>
